WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134121
[New Multicolumn] Writing mode and direction of flow thread can mismatch enclosing paginated RenderView
https://bugs.webkit.org/show_bug.cgi?id=134121
Summary
[New Multicolumn] Writing mode and direction of flow thread can mismatch encl...
Dave Hyatt
Reported
2014-06-20 14:08:50 PDT
When a document propagates a writing mode change or direction change up to the view, we don't properly update the writing-mode and direction of column sets or flow thread if the view is paginated.
Attachments
Patch
(2.12 KB, patch)
2014-06-20 14:09 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(2.23 MB, patch)
2014-06-23 11:18 PDT
,
Dave Hyatt
dino
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2014-06-20 14:09:35 PDT
Created
attachment 233452
[details]
Patch
WebKit Commit Bot
Comment 2
2014-06-20 14:12:00 PDT
Attachment 233452
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderBox.cpp:401: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebCore/rendering/RenderBox.cpp:401: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/rendering/RenderBox.cpp:402: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/rendering/RenderBox.cpp:403: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 4 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3
2014-06-23 11:18:02 PDT
Created
attachment 233617
[details]
Patch
WebKit Commit Bot
Comment 4
2014-06-23 11:20:11 PDT
Attachment 233617
[details]
did not pass style-queue: ERROR: Source/WebCore/rendering/RenderBlockFlow.cpp:1977: Multi line control clauses should use braces. [whitespace/braces] [4] ERROR: Source/WebCore/rendering/RenderBlockFlow.cpp:1978: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/rendering/RenderBlockFlow.cpp:1979: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 3 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dean Jackson
Comment 5
2014-06-23 11:34:38 PDT
Comment on
attachment 233617
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=233617&action=review
> Source/WebCore/rendering/RenderBox.cpp:372 > + RenderObject* rootRenderer = isBodyRenderer ? document().documentElement()->renderer() : nullptr;
Slightly risky that someone will move rootRenderer outside the isBodyRenderer blocks below, but hopefully no one will be that careless ($10 that it will be me in 4 years time).
Dave Hyatt
Comment 6
2014-06-23 11:57:25 PDT
Fix landed in
r170304
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug