Source/WebCore/rendering/RenderBlockFlow.cpp
@@ -1968,12 +1968,14 @@ void RenderBlockFlow::styleDidChange(StyleDifference diff, const RenderStyle* ol
             invalidateLineLayoutPath();
     }
 
-    if (multiColumnFlowThread()) {
-        for (auto child = firstChildBox();
-             child && (child->isInFlowRenderFlowThread() || child->isRenderMultiColumnSet());
-             child = child->nextSiblingBox())
-            child->setStyle(RenderStyle::createAnonymousStyleWithDisplay(&style(), BLOCK));
-    }
+    if (multiColumnFlowThread())
+        updateStylesForColumnChildren();
+}
+
+void RenderBlockFlow::updateStylesForColumnChildren()
+{
+    for (auto child = firstChildBox(); child && (child->isInFlowRenderFlowThread() || child->isRenderMultiColumnSet()); child = child->nextSiblingBox())
+        child->setStyle(RenderStyle::createAnonymousStyleWithDisplay(&style(), BLOCK));
 }
 
 void RenderBlockFlow::styleWillChange(StyleDifference diff, const RenderStyle& newStyle)
